<resources>
    <string name="app_name">FRC1732ScoutingApp</string>
    <string name="action_settings">Settings</string>

    <string name="title_activity_qrscanner">QR Code Scanner</string>
    <string name="title_fragment_home">Home</string>
    <string name="title_fragment_log_match">Log Match</string>
    <string name="title_fragment_sync_sheets">Sync to Sheets</string>

    <string name="button_fragment_home_log_match">Log Match</string>
    <string name="button_fragment_home_sync_sheets">Sync to Sheets</string>
    <string name="text_fragment_home_welcome">Hello there!</string>

    <string name="label_fragment_sqlitedatabase_team_number">Team Number</string>
    <string name="label_fragment_sqlitedatabase_match_number">Match Number</string>
    <string name="label_fragment_sqlitedatabase_init_line">Init Line</string>
    <string name="label_fragment_sqlitedatabase_auto_lower">Auto Lower</string>
    <string name="label_fragment_sqlitedatabase_auto_outer">Auto Outer</string>
    <string name="label_fragment_sqlitedatabase_auto_inner">Auto Inner</string>
    <string name="button_fragment_sqlitedatabase_scan_qr">Scan QR</string>
    <string name="button_fragment_sqlitedatabase_save">Save</string>

    <string name="button_fragment_syncsheets_sync">Sync</string>
    <string name="button_fragment_syncsheets_syncall">Sync All</string>

    <string name="bluetooth_master_device_name">1732 Scouting Master</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_settings">Settings</string>

    <!-- Preference Titles -->
    <string name="messages_header">Messages</string>
    <string name="sync_header">Sync</string>

    <!-- Messages Preferences -->
    <string name="signature_title">Your signature</string>
    <string name="reply_title">Default reply action</string>

    <!-- Sync Preferences -->
    <string name="sync_title">Sync email periodically</string>
    <string name="attachment_title">Download incoming attachments</string>
    <string name="attachment_summary_on">Automatically download attachments for incoming emails
    </string>
    <string name="attachment_summary_off">Only download attachments when manually requested</string>
</resources>
