<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools">
    <androidx.coordinatorlayout.widget.CoordinatorLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#ffffff"
        android:clickable="true"
        tools:context="org.frc1732scoutingapp.fragments.SQLLiteDatabaseFragment">

        <RelativeLayout
            android:id="@+id/relativeLayout"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:paddingLeft="16dp"
            android:paddingTop="16dp"
            android:paddingRight="16dp"
            android:paddingBottom="16dp">

            <TextView
                android:id="@+id/teamNumberLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingTop="15dp"
                android:paddingRight="8dp"
                android:text="@string/label_fragment_sqlitedatabase_team_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/teamNumberEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignBottom="@id/teamNumberLabel"
                android:layout_toRightOf="@id/teamNumberLabel"
                android:inputType="number" />

            <TextView
                android:id="@+id/matchLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/teamNumberLabel"
                android:paddingTop="15dp"
                android:text="@string/label_fragment_sqlitedatabase_match_number"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/matchEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/teamNumberEditText"
                android:layout_alignBottom="@id/matchLabel"
                android:layout_toRightOf="@id/matchLabel"
                android:inputType="number"/>

            <TextView
                android:id="@+id/initLineLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/matchLabel"
                android:paddingTop="15dp"
                android:text="@string/label_fragment_sqlitedatabase_init_line"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/initLineEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/teamNumberEditText"
                android:layout_alignBottom="@id/initLineLabel"
                android:layout_toRightOf="@id/initLineLabel"
                android:inputType="number" />

            <TextView
                android:id="@+id/autoLowerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/initLineLabel"
                android:paddingTop="15dp"
                android:text="@string/label_fragment_sqlitedatabase_auto_lower"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/autoLowerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/teamNumberEditText"
                android:layout_alignBottom="@id/autoLowerLabel"
                android:layout_toRightOf="@id/autoLowerLabel"
                android:inputType="number" />

            <TextView
                android:id="@+id/autoOuterLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/autoLowerLabel"
                android:paddingTop="15dp"
                android:text="@string/label_fragment_sqlitedatabase_auto_outer"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/autoOuterEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/teamNumberEditText"
                android:layout_alignBottom="@id/autoOuterLabel"
                android:layout_toRightOf="@id/autoOuterLabel"
                android:inputType="number" />

            <TextView
                android:id="@+id/autoInnerLabel"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/autoOuterLabel"
                android:paddingTop="15dp"
                android:text="@string/label_fragment_sqlitedatabase_auto_inner"
                android:textSize="18sp" />

            <EditText
                android:id="@+id/autoInnerEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignLeft="@id/teamNumberEditText"
                android:layout_alignBottom="@id/autoInnerLabel"
                android:layout_toRightOf="@id/autoInnerLabel"
                android:inputType="number" />

            <Button
                android:id="@+id/saveButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/autoInnerLabel"
                android:layout_alignParentRight="true"
                android:layout_marginBottom="30dp"
                android:text="@string/button_fragment_sqlitedatabase_save" />

            <Button
                android:id="@+id/searchButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/autoInnerLabel"
                android:layout_alignParentLeft="true"
                android:layout_marginBottom="30dp"
                android:text="Search" />

            <Button
                android:id="@+id/scanQRButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_centerVertical="true"
                android:text="@string/button_fragment_sqlitedatabase_scan_qr"/>

            <ImageView
                android:id="@+id/QRCodeImage"
                android:layout_marginTop="50dp"
                android:layout_width="235dp"
                android:layout_height="228dp"
                android:layout_below="@id/scanQRButton"
                android:layout_centerHorizontal="true"
                tools:srcCompat="@tools:sample/avatars" />

        </RelativeLayout>

        <include layout="@layout/content_sqlite_database" />

    </androidx.coordinatorlayout.widget.CoordinatorLayout>
</layout>
